src/FinancialForce Accounting/objects/codaIncScheduleStagingJnl__c.object
<CustomObject>
    <customHelpPage>codahelpincschedulestagingjnl</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncomeGeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income General Ledger Account</label>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsInvoiceList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsCompanyList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Background Posting</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Background Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit Of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:Inc Schedule Staging Jnl</label>
    <nameField>
        <displayFormat>ISSJ{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inc Schedule Staging Jnls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>